# benchmark-graphs

./: .gitignore  README.md  requirements.txt  setup.cfg
benchmark_graphs/bhoslib/: __init__.py  maximum_clique.py  maximum_independent_set.py
benchmark_graphs/bhoslib/graphs/frb40-19-mis/: __init__.py
benchmark_graphs/parser/: dimacs.py
tests/bhoslib/: test_maximum_clique.py  test_maximum_independent_set.py
tests/parser/: test_parse_dimacs.py
tests/parser/graphs/: test_graph_in_dimacs_format
