[metadata]
name = benchmark-graphs
version = 0.0.11
author = hvidberrrg
author_email = hvidberrrg@users.noreply.github.com
description = A collection of benchmark graphs in NetworkX format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hvidberrrg/benchmark-graphs
project_urls =
    Bug Tracker = https://github.com/hvidberrrg/benchmark-graphs/issues
    Documentation = https://github.com/hvidberrrg/benchmark-graphs/issues
    Source Code = https://github.com/hvidberrrg/benchmark-graphs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =  
  = .
packages = find:
python_requires = >=3.6
install_requires =
    importlib_resources >= 5.1.0

[options.package_data]
* = *.mis

[options.packages.find]
where = .